--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/andela/jobs/1794389'>Job Application for Product Design Intern at Andela</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
@@ -57,11 +61,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/15c3d70f-27d8-48fa-8397-dece08b73325'>Fanatics - Communications Intern - Fall 2019</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nist.join.com/jobs/262433-internship-ui-ux'>Job @ NIST (Berlin): Internship UI/UX | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -69,7 +73,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/socialchorus/6992d107-e0a1-4e85-b75a-c33fb8e61ec0'>SocialChorus - Sales Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -143,7 +147,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -177,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -201,7 +205,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -233,15 +237,15 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/astorian/9d9c9363-513f-4abf-b3a8-d049309fa36d'>Astorian - Fall Semester Growth Intern</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=s1mKbgw3&__jvsc=Twitter&bid=nZtRVLwu'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=s1mKbgw3&__jvsc=Twitter&bid=nZtRVLwu'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -447,7 +451,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=omjn9fwV&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=nR7WUKw3'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=omjn9fwV&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=nR7WUKw3'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -472,11 +476,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692352560-internship-in-the-field-of-platform-engineering-wheel-speed-sensors'>Bosch Group Internship in the field of Platform Engineering Wheel Speed Sensors | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/intern-57779'>Intern - CBRE Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... SummaryResponsible for conducting research and data analysis for a variety of 
-organizational projects and initiatives.Key ResponsibilitiesAssists in.....</p>
 <hr/>
 
 
